# centaur

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Justfile  Makefile  README.md  WRITE_ACCESS_TEST.md  docker-compose.yml  entrypoint.sh  index.yaml  package.json  plugins.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test-pr-attribution-marker.txt  test-pr-random-file.txt  tools.toml
api/: pyproject.toml
api/src/ai_v2_api/: cli.py  config.py  deps.py  main.py  mcp_server.py
api/src/ai_v2_api/routers/: health.py  query.py  search.py  secrets.py  sync.py
crates/harness-server/: Cargo.toml
crates/harness-server/scripts/: amp-app-server-smoke.sh  claude-app-server-smoke.sh  claude-code-tool-smoke.sh  codex-app-server-smoke.sh  compare-long-streaming-real-harnesses.sh  compare-multiturn-real-harnesses.sh  compare-real-harnesses.sh  compare-steer-real-harnesses.sh  stress-codex-claude.sh
crates/harness-server/src/: aisdk.rs  amp.rs  anthropic.rs  claude.rs  codemode.rs  codex.rs  error.rs  lib.rs  main.rs  multiplexer.rs  server.rs  traits.rs  turn.rs  validation.rs  wire.rs
crates/harness-server/tests/: app_server_stdio.rs  claude_app_server_stdio.rs
dataplane/: pyproject.toml
dataplane/src/ai_v2_dataplane/: cli.py  config.py  cursors.py  db.py  embeddings.py  models.py  pipeline.py  transform.py
dataplane/src/ai_v2_dataplane/extractors/: attio.py  base.py  betterstack.py  github.py  google.py  granola.py  linear.py  pylon.py  slack.py
docs/: package-lock.json  package.json  sidebar.ts  (+2 more)
sandbox/: Dockerfile  SYSTEM_PROMPT.md  entrypoint.sh  nano-banana.sh  pyproject.toml
sandbox/scripts/: update-repos.sh
sandbox/src/ai_v2_sandbox/: cli.py  docker_builder.py  repo_sync.py
services/api-rs/: Cargo.toml  Dockerfile  Justfile
services/api-rs/crates/absurd-sdk/src/: lib.rs
services/api-rs/crates/centaur-api-server/: Cargo.toml
services/api-rs/crates/centaur-api-server/src/: activity_summary.rs  args.rs  cli.rs  codemode_mcp.rs  error.rs  lib.rs  main.rs  mcp.rs  persona_discovery.rs  routes.rs  slack_proxy.rs  tool_discovery.rs  types.rs
services/api-rs/crates/centaur-api-server/src/cli/: auth.rs  iron_proxy.rs  kubernetes.rs  sandbox.rs  workload.rs
services/api-rs/crates/centaur-api-server/src/cli/iron_proxy/: ca.rs  image.rs  source.rs
services/api-rs/crates/centaur-codemode-mcp/: Cargo.toml
services/api-rs/crates/centaur-codemode-mcp/src/: main.rs
services/api-rs/crates/centaur-iron-control/src/: client.rs  lib.rs  models.rs  principal.rs  registry.rs  session.rs
services/api-rs/crates/centaur-iron-proxy/: Cargo.toml
services/api-rs/crates/centaur-iron-proxy/src/: error.rs  fragment.rs  lib.rs  ports.rs  source.rs  tests.rs
services/api-rs/crates/centaur-iron-proxy/src/model/: broker.rs  mod.rs  postgres.rs  proxy.rs  transform.rs  values.rs
services/api-rs/crates/centaur-perms/: Cargo.toml
services/api-rs/crates/centaur-perms/src/: create.rs  main.rs  principal.rs  tests.rs  tools.rs  translate.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/: Cargo.toml
services/api-rs/crates/centaur-sandbox-agent-k8s/examples/: agent_sandbox_smoke.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/src/: config.rs  iron_proxy.rs  lib.rs  resources.rs  tests.rs  tools.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/src/backend/: iron_proxy.rs  mod.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/src/resources/: common.rs  iron_proxy.rs  mod.rs  sandbox.rs
services/api-rs/crates/centaur-sandbox-core/: Cargo.toml
services/api-rs/crates/centaur-sandbox-core/src/: backend.rs  error.rs  io.rs  lib.rs  lifecycle.rs  spec.rs
services/api-rs/crates/centaur-sandbox-core/src/spec/: credential.rs  env.rs
services/api-rs/crates/centaur-sandbox-e2e/: Cargo.toml
services/api-rs/crates/centaur-sandbox-e2e/tests/: invariants.rs
services/api-rs/crates/centaur-sandbox-local/src/: lib.rs
services/api-rs/crates/centaur-sandbox-manager/: Cargo.toml
services/api-rs/crates/centaur-sandbox-manager/src/: lib.rs  manager.rs  reaper.rs  tests.rs  warm_pool.rs
services/api-rs/crates/centaur-session-cli/: Cargo.toml
services/api-rs/crates/centaur-session-cli/src/: main.rs  tui.rs
services/api-rs/crates/centaur-session-core/: Cargo.toml
services/api-rs/crates/centaur-session-core/src/: lib.rs  metadata.rs  session.rs  thread_key.rs
services/api-rs/crates/centaur-session-runtime/: Cargo.toml
services/api-rs/crates/centaur-session-runtime/src/: error.rs  event_stream.rs  lib.rs  runtime.rs  session_io.rs  validation.rs  workload.rs
services/api-rs/crates/centaur-session-runtime/src/runtime/: sandbox.rs  session.rs
services/api-rs/crates/centaur-session-sqlx/: Cargo.toml
services/api-rs/crates/centaur-session-sqlx/migrations/: 0003_session_pipe_leases.sql  0036_cancel_weekly_usage_summary_schedule.sql
services/api-rs/crates/centaur-session-sqlx/src/: error.rs  lib.rs  listener.rs  rows.rs  store.rs
services/api-rs/crates/centaur-session-sqlx/tests/: slack_dm_context_rls.rs
services/api-rs/crates/centaur-telemetry/: Cargo.toml
services/api-rs/crates/centaur-telemetry/src/: lib.rs
services/api-rs/crates/centaur-workflows/: Cargo.toml
services/api-rs/crates/centaur-workflows/src/: lib.rs
services/api-rs/rfcs/: 0001-sandbox-abstraction.md  0003-telemetry.md
tools-paradigm/legal-playbook/: __init__.py  cli.py  paradigm-playbook.md  pyproject.toml
tools-paradigm/termsheet/: clause_db.py  cli.py  doc_store.py  docx_pipeline.py  generator.py  models.py  pyproject.toml  store.py
tools-paradigm/termsheet/templates/: paradigm_term_sheet.docx  paradigm_term_sheet_preprocessed.docx
tools/alphasense/: cli.py  client.py  pyproject.toml
tools/infra/computeruse/: .env.example  cli.py  client.py  pyproject.toml
tools/infra/computeruse/resources/: autounattend.xml
tools/infra/datadog/: .env.example  cli.py  client.py  pyproject.toml
tools/nano-banana/: __init__.py  cli.py  client.py  pyproject.toml
tools/productivity/send_email/: __init__.py  cli.py  client.py  pyproject.toml
(+830 files in other folders)
