[project]
name = "ai-v2-sandbox"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.scripts]
sandbox = "ai_v2_sandbox.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
