[workspace]
members = [
    "crates/centaur-sandbox-core",
    "crates/centaur-sandbox-e2e",
    "crates/centaur-sandbox-agent-k8s",
    "crates/centaur-sandbox-local",
    "crates/centaur-sandbox-manager",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/paradigmxyz/centaur"

[workspace.dependencies]
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
centaur-sandbox-core = { path = "crates/centaur-sandbox-core" }
centaur-sandbox-agent-k8s = { path = "crates/centaur-sandbox-agent-k8s" }
centaur-sandbox-local = { path = "crates/centaur-sandbox-local" }
centaur-sandbox-manager = { path = "crates/centaur-sandbox-manager" }
clap = { version = "4.6.1", features = ["derive", "env"] }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = "3.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = "1"
