[project]
name = "termsheet"
description = "Term sheet generation and deal tracking CLI"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-docx>=1.1.0",
    "lxml>=5.2.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "docx-revisions",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ai-v2]
module = "client.py"
