[project]
name = "ai-v2-plugin-alphasense"
description = "AlphaSense CLI for market intelligence and document search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2-plugin]
module = "client.py"
