[project]
name = "nano-banana"
description = "Nano Banana 2 / Pro CLI for Google Gemini image generation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.66.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
hosts = ["generativelanguage.googleapis.com"]
secrets = ["GOOGLE_API_KEY"]
