[project]
name = "computeruse"
description = "Spawn and drive Windows VMs (QEMU) with computer-use actions over VNC"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "vncdotool>=1.2.0",
    "pillow>=10.0.0",
]

[project.scripts]
computeruse = "centaur_tool_computeruse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_computeruse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
hosts = []
secrets = []
