[project]
name = "datadog"
description = "Datadog observability — logs, metrics, monitors, hosts, and dashboards (read-only)"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
datadog = "centaur_tool_datadog.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_datadog"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
hosts = [
    "api.datadoghq.com",
    "api.datadoghq.eu",
    "api.us3.datadoghq.com",
    "api.us5.datadoghq.com",
    "api.ap1.datadoghq.com",
    "api.ap2.datadoghq.com",
    "api.ddog-gov.com",
]
secrets = [
    {type = "http", name = "DD_API_KEY", match_headers = ["DD-API-KEY"], hosts = ["api.datadoghq.com", "api.datadoghq.eu", "api.us3.datadoghq.com", "api.us5.datadoghq.com", "api.ap1.datadoghq.com", "api.ap2.datadoghq.com", "api.ddog-gov.com"]},
    {type = "http", name = "DD_APP_KEY", match_headers = ["DD-APPLICATION-KEY"], hosts = ["api.datadoghq.com", "api.datadoghq.eu", "api.us3.datadoghq.com", "api.us5.datadoghq.com", "api.ap1.datadoghq.com", "api.ap2.datadoghq.com", "api.ddog-gov.com"]},
]
