[package]
name = "centaur-api-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
centaur-sandbox-agent-k8s.workspace = true
centaur-sandbox-core.workspace = true
centaur-sandbox-local.workspace = true
centaur-session-core.workspace = true
centaur-session-sqlx.workspace = true
clap.workspace = true
futures-util.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
