[package]
name = "centaur-codemode-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code Mode MCP server: external clients compose Centaur tools in one Python script per roundtrip"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "signal", "time", "fs"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
