[package]
name = "centaur-sandbox-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
centaur-sandbox-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio = { version = "1", features = ["macros", "rt", "sync"] }
