[package]
name = "centaur-session-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
centaur-session-core.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
futures-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
urlencoding.workspace = true
uuid.workspace = true
